-fixed a bug in registration where DOB was not triggering TOC when age was under 12. - fixed bug where pet matching text was spilling over table container. -made pet match voting text more clear. -removed Pet Points messages - let this feature be less explicit. -

--- a/project/matching/static/matching/css/style.css
+++ b/project/matching/static/matching/css/style.css
@@ -3,6 +3,7 @@
 	display:inline-block;
 	min-width:580px;
 	height:80vh;
+	min-height:600px;
 	border-radius:10px;
 	vertical-align: top;
 	text-align:initial;
@@ -86,6 +87,7 @@
 	min-width:580px;
 	border-radius:10px;
 	height:80vh;
+	min-height:600px;
 	box-shadow: 0px 5px 20px #888888;
 	background: #F0F0F0;
 	margin:10px auto 20px 10px;
